--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,8 @@ typings/
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
+# parcel cache (https://parceljs.org/)
+.parcel-cache
 
 # Next.js build output
 .next
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# env files
+.env*
