--- a/package.json
+++ b/package.json
@@ -2,26 +2,27 @@
   "name": "vanilla",
   "version": "1.0.0",
   "description": "JavaScript example starter project",
-  "main": "index.html",
+  "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "serve": "node server.js"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@types/dat.gui": "^0.7.7",
-    "dat.gui": "^0.7.9",
-    "file-saver": "^2.0.5",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-static-files-copy": "^2.6.0",
-    "three": "^0.126.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "serve-static": "^1.15.0",
+    "dotenv-flow": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9"
+    "dat.gui": "^0.7.9",
+    "file-saver": "^2.0.5",
+    "parcel": "^2.4.1",
+    "parcel-reporter-static-files-copy": "^1.3.4",
+    "three": "^0.139.2"
   },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
-  },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "keywords": [
     "javascript",
     "starter"
