compose: fix service name

--- a/docker-compose.image-framer.yml
+++ b/docker-compose.image-framer.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
 
-  tezland-app:
+  image-framer:
     container_name: image-framer
     image: image-framer:latest
     build:
