fix nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location / {
-        return 301 wss://framer.tz1and.com$request_uri;
+        return 301 https://framer.tz1and.com$request_uri;
     }
 }
 
