--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.2",
-    "serve-static": "^1.15.0",
-    "dotenv-flow": "^3.2.0"
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "dat.gui": "^0.7.9",
     "file-saver": "^2.0.5",
     "parcel": "^2.4.1",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "parcel-reporter-static-files-copy": "^1.3.4",
     "three": "^0.139.2"
   },
