--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel --no-cache index.html --open",
     "build": "parcel build index.html",
     "serve": "node server.js"
   },
