change package name, nginx config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla",
+  "name": "image-framer",
   "version": "1.0.1",
   "description": "JavaScript example starter project",
   "license": "MIT",
