--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,16 @@
 # image-framer
 
-# Redirect http to https.
+# Redirect http to https and certbot.
 server {
     listen 80;
     listen [::]:80;
 
     server_name framer.tz1and.com;
     server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         return 301 https://framer.tz1and.com$request_uri;
